--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ plugins {
     id "androidx.navigation.safeargs.kotlin"
 }
 
+
+def localProperties= new Properties()
+localProperties.load(new FileInputStream(rootProject.file("local.properties")))
+
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -14,8 +19,11 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        buildConfigField("String","OPEN_WEATHER_MAP_API_KEY","\"${localProperties["OPEN_WEATHER_MAP_API_KEY"]}\"")
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
     }
 
     buildTypes {
@@ -55,6 +63,12 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.navigation:navigation-fragment-ktx:2.2.2"
     implementation  "androidx.navigation:navigation-ui-ktx:2.2.2"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.8.2'
+    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+
+    implementation("io.coil-kt:coil:1.2.1")
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
