--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ android {
         jvmTarget = '1.8'
     }
 
+
+
     compileOptions
             {
                 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -51,6 +53,10 @@ android {
             {
                 jvmTarget = JavaVersion.VERSION_1_8
             }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -66,6 +72,9 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.8.2'
     implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
 
     implementation("io.coil-kt:coil:1.2.1")
 
